# NLP_multihead_multiclass

./: .gitignore  README.md  dev_test.py  main.py  pyproject.toml  requirements.txt  test.py
configs/: config.yaml  training.yaml
configs/model/: biobert.yaml
data/processed/: .~lock.train.csv#  load.py  train.csv  val.csv
notebook/: mh_mc.ipynb  test.py
prep/: preprocessing.py
scripts/: build_dataset.py  eval.py  train.py
src/data/: __init__.py  collate.py  dataset.py  label_maps.py
src/factory/: model_factory.py  peft_factory.py
src/metadata_normalizer/: __init__.py
src/metadata_normalizer/inference/: config_loader.py  predictor.py
src/metrics/: classification.py
src/models/: base.py  biobert_multitask.py  dep_BioBertMultiHead.py  hf_model.py
src/peft/: base.py  lora.py  qlora.py
src/prep/: preprocessing.py
src/trainer/: trainer.py
src/training/: trainer.py  utils.py
tests/: test_collator.py  test_datamodule.py  test_dataset.py  test_model.py
